--- a/dashboard/src/account.html
+++ b/dashboard/src/account.html
@@ -1,122 +1,177 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./scss/main.scss" />
+    <title>Account</title>
+  </head>
 
-  <link rel="stylesheet" href="./scss/main.scss" />
-  <title>Account</title>
-</head>
+  <body>
+    <nav class="navigation">
+      <ul class="navigation__list">
+        <li class="navigation__list-item">
+          <a href="./index.html" class="navigation__link">
+            <span class="navigation__icon">
+              <svg
+                preserveAspectRatio="xMinYMin meet"
+                viewBox="0 0 16 16"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <use href="./assets/icons/icons.svg#dashboard"></use>
+              </svg>
+            </span>
+            <span class="navigation__label">Dashboard</span>
+          </a>
+        </li>
+        <li class="navigation__list-item">
+          <a href="./customers.html" class="navigation__link">
+            <span class="navigation__icon">
+              <svg
+                preserveAspectRatio="xMinYMin meet"
+                viewBox="0 0 20 20"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <use href="./assets/icons/icons.svg#customers"></use>
+              </svg>
+            </span>
+            <span class="navigation__label">Customers</span>
+          </a>
+        </li>
+        <li class="navigation__list-item">
+          <a href="./products.html" class="navigation__link">
+            <span class="navigation__icon">
+              <svg
+                preserveAspectRatio="xMinYMin meet"
+                viewBox="0 0 16 16"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <use href="./assets/icons/icons.svg#products"></use>
+              </svg>
+            </span>
+            <span class="navigation__label">Products</span></a
+          >
+        </li>
+        <li class="navigation__list-item">
+          <a
+            href="./account.html"
+            class="navigation__link navigation__link--active"
+          >
+            <span class="navigation__icon">
+              <svg
+                preserveAspectRatio="xMinYMin meet"
+                viewBox="0 0 16 16"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <use href="./assets/icons/icons.svg#account"></use>
+              </svg>
+            </span>
+            <span class="navigation__label">Account</span></a
+          >
+        </li>
+        <li class="navigation__list-item">
+          <a href="./settings.html" class="navigation__link">
+            <span class="navigation__icon">
+              <svg
+                preserveAspectRatio="xMinYMin meet"
+                viewBox="0 0 16 16"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <use href="./assets/icons/icons.svg#settings"></use>
+              </svg>
+            </span>
+            <span class="navigation__label">Settings</span></a
+          >
+        </li>
+        <li class="navigation__list-item">
+          <a href="./login.html" class="navigation__link">
+            <span class="navigation__icon">
+              <svg
+                preserveAspectRatio="xMinYMin meet"
+                viewBox="0 0 16 16"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <use href="./assets/icons/icons.svg#login"></use>
+              </svg>
+            </span>
+            <span class="navigation__label">Login</span></a
+          >
+        </li>
+        <li class="navigation__list-item">
+          <a href="./register.html" class="navigation__link">
+            <span class="navigation__icon">
+              <svg
+                preserveAspectRatio="xMinYMin meet"
+                viewBox="0 0 16 16"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <use href="./assets/icons/icons.svg#register"></use>
+              </svg>
+            </span>
+            <span class="navigation__label">Register</span></a
+          >
+        </li>
+        <li class="navigation__list-item">
+          <a href="./error.html" class="navigation__link">
+            <span class="navigation__icon">
+              <svg
+                preserveAspectRatio="xMinYMin meet"
+                viewBox="0 0 16 16"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <use href="./assets/icons/icons.svg#error"></use>
+              </svg>
+            </span>
+            <span class="navigation__label">Error</span></a
+          >
+        </li>
+      </ul>
+    </nav>
 
-<body>
-  <nav class="navigation">
-    <ul class="navigation__list">
-      <li class="navigation__list-item">
-        <a href="./index.html" class="navigation__link">
-          <span class="navigation__icon">
-            <svg preserveAspectRatio="xMinYMin meet" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
-              <use href="./assets/icons/icons.svg#dashboard"></use>
-            </svg>
-          </span>
-          <span class="navigation__label">Dashboard</span>
-        </a>
-      </li>
-      <li class="navigation__list-item">
-        <a href="./customers.html" class="navigation__link">
-          <span class="navigation__icon">
-            <svg preserveAspectRatio="xMinYMin meet" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+    <div class="page">
+      <header class="header page__header">
+        <button class="header__search">
+          <svg
+            preserveAspectRatio="xMinYMin meet"
+            viewBox="0 0 20 20"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <use href="./assets/icons/icons.svg#search"></use>
+          </svg>
+        </button>
+
+        <nav class="header__nav">
+          <a href="#">
+            <svg
+              preserveAspectRatio="xMinYMin meet"
+              viewBox="0 0 22 22"
+              xmlns="http://www.w3.org/2000/svg"
+            >
               <use href="./assets/icons/icons.svg#customers"></use>
             </svg>
-          </span>
-          <span class="navigation__label">Customers</span>
-        </a>
-      </li>
-      <li class="navigation__list-item">
-        <a href="./products.html" class="navigation__link">
-          <span class="navigation__icon">
-            <svg preserveAspectRatio="xMinYMin meet" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
-              <use href="./assets/icons/icons.svg#products"></use>
-            </svg>
-          </span>
-          <span class="navigation__label">Products</span></a>
-      </li>
-      <li class="navigation__list-item">
-        <a href="./account.html" class="navigation__link navigation__link--active">
-          <span class="navigation__icon">
-            <svg preserveAspectRatio="xMinYMin meet" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
-              <use href="./assets/icons/icons.svg#account"></use>
-            </svg>
-          </span>
-          <span class="navigation__label">Account</span></a>
-      </li>
-      <li class="navigation__list-item">
-        <a href="./settings.html" class="navigation__link">
-          <span class="navigation__icon">
-            <svg preserveAspectRatio="xMinYMin meet" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
-              <use href="./assets/icons/icons.svg#settings"></use>
-            </svg>
-          </span>
-          <span class="navigation__label">Settings</span></a>
-      </li>
-      <li class="navigation__list-item">
-        <a href="./login.html" class="navigation__link">
-          <span class="navigation__icon">
-            <svg preserveAspectRatio="xMinYMin meet" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
-              <use href="./assets/icons/icons.svg#login"></use>
-            </svg>
-          </span>
-          <span class="navigation__label">Login</span></a>
-      </li>
-      <li class="navigation__list-item">
-        <a href="./register.html" class="navigation__link">
-          <span class="navigation__icon">
-            <svg preserveAspectRatio="xMinYMin meet" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
-              <use href="./assets/icons/icons.svg#register"></use>
-            </svg>
-          </span>
-          <span class="navigation__label">Register</span></a>
-      </li>
-      <li class="navigation__list-item">
-        <a href="./error.html" class="navigation__link">
-          <span class="navigation__icon">
-            <svg preserveAspectRatio="xMinYMin meet" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
-              <use href="./assets/icons/icons.svg#error"></use>
-            </svg>
-          </span>
-          <span class="navigation__label">Error</span></a>
-      </li>
-    </ul>
-  </nav>
+          </a>
 
-  <div class="page">
-    <header class="header page__header">
-      <button class="header__search">
-        <svg preserveAspectRatio="xMinYMin meet" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-          <use href="./assets/icons/icons.svg#search"></use>
-        </svg>
-      </button>
-
-      <nav class="header__nav">
-        <a href="#">
-          <svg preserveAspectRatio="xMinYMin meet" viewBox="0 0 22 22" xmlns="http://www.w3.org/2000/svg">
-            <use href="./assets/icons/icons.svg#customers"></use>
-          </svg>
-        </a>
-
-        <a href="#">
-          <svg preserveAspectRatio="xMinYMin meet" viewBox="0 0 22 22" xmlns="http://www.w3.org/2000/svg">
-            <use href="./assets/icons/icons.svg#notification"></use>
-          </svg>
-        </a>
-        <a href="#">
-          <img src="./assets/images/Avatar.png" alt="profile" />
-        </a>
-      </nav>
-    </header>
-    <main class="main page__main">main</main>
-  </div>
-</body>
-
+          <a href="#">
+            <svg
+              preserveAspectRatio="xMinYMin meet"
+              viewBox="0 0 22 22"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <use href="./assets/icons/icons.svg#notification"></use>
+            </svg>
+          </a>
+          <a href="#">
+            <img
+              class="header__avatar"
+              src="./assets/images/Avatar.jpg"
+              alt="profile"
+            />
+          </a>
+        </nav>
+      </header>
+      <main class="main page__main">main</main>
+    </div>
+  </body>
 </html>
