--- a/dashboard/src/login.html
+++ b/dashboard/src/login.html
@@ -1,122 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./scss/main.scss" />
+    <title>Login</title>
+  </head>
 
-  <link rel="stylesheet" href="./scss/main.scss" />
-  <title>Login</title>
-</head>
+  <body>
+    <div class="auth-container">
+      <section class="auth auth-container__inner">
+        <a class="return-link auth__return-link" href="./index.html">
+          <span class="return-link__icon"
+            ><svg
+              preserveAspectRatio="xMinYMin meet"
+              viewBox="0 0 20 16"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <use href="./assets/icons/icons.svg#arrow-3-left"></use></svg
+          ></span>
 
-<body>
-  <nav class="navigation">
-    <ul class="navigation__list">
-      <li class="navigation__list-item">
-        <a href="./index.html" class="navigation__link">
-          <span class="navigation__icon">
-            <svg preserveAspectRatio="xMinYMin meet" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
-              <use href="./assets/icons/icons.svg#dashboard"></use>
-            </svg>
-          </span>
-          <span class="navigation__label">Dashboard</span>
+          <span>Dashboard</span>
         </a>
-      </li>
-      <li class="navigation__list-item">
-        <a href="./customers.html" class="navigation__link">
-          <span class="navigation__icon">
-            <svg preserveAspectRatio="xMinYMin meet" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-              <use href="./assets/icons/icons.svg#customers"></use>
-            </svg>
-          </span>
-          <span class="navigation__label">Customers</span>
-        </a>
-      </li>
-      <li class="navigation__list-item">
-        <a href="./products.html" class="navigation__link">
-          <span class="navigation__icon">
-            <svg preserveAspectRatio="xMinYMin meet" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
-              <use href="./assets/icons/icons.svg#products"></use>
-            </svg>
-          </span>
-          <span class="navigation__label">Products</span></a>
-      </li>
-      <li class="navigation__list-item">
-        <a href="./account.html" class="navigation__link">
-          <span class="navigation__icon">
-            <svg preserveAspectRatio="xMinYMin meet" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
-              <use href="./assets/icons/icons.svg#account"></use>
-            </svg>
-          </span>
-          <span class="navigation__label">Account</span></a>
-      </li>
-      <li class="navigation__list-item">
-        <a href="./settings.html" class="navigation__link">
-          <span class="navigation__icon">
-            <svg preserveAspectRatio="xMinYMin meet" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
-              <use href="./assets/icons/icons.svg#settings"></use>
-            </svg>
-          </span>
-          <span class="navigation__label">Settings</span></a>
-      </li>
-      <li class="navigation__list-item">
-        <a href="./login.html" class="navigation__link navigation__link--active">
-          <span class="navigation__icon">
-            <svg preserveAspectRatio="xMinYMin meet" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
-              <use href="./assets/icons/icons.svg#login"></use>
-            </svg>
-          </span>
-          <span class="navigation__label">Login</span></a>
-      </li>
-      <li class="navigation__list-item">
-        <a href="./register.html" class="navigation__link">
-          <span class="navigation__icon">
-            <svg preserveAspectRatio="xMinYMin meet" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
-              <use href="./assets/icons/icons.svg#register"></use>
-            </svg>
-          </span>
-          <span class="navigation__label">Register</span></a>
-      </li>
-      <li class="navigation__list-item">
-        <a href="./error.html" class="navigation__link">
-          <span class="navigation__icon">
-            <svg preserveAspectRatio="xMinYMin meet" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
-              <use href="./assets/icons/icons.svg#error"></use>
-            </svg>
-          </span>
-          <span class="navigation__label">Error</span></a>
-      </li>
-    </ul>
-  </nav>
+        <h2 class="auth__heading">Sign in</h2>
+        <p class="auth__text">Sign up on the internal platform</p>
+        <div class="auth__socials">
+          <button class="auth__button auth__button--facebook">
+            <span class="auth__icon">
+              <svg
+                preserveAspectRatio="xMinYMin meet"
+                viewBox="0 0 20 20"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <use href="./assets/icons/icons.svg#facebook"></use>
+              </svg>
+            </span>
 
-  <div class="page">
-    <header class="header page__header">
-      <button class="header__search">
-        <svg preserveAspectRatio="xMinYMin meet" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-          <use href="./assets/icons/icons.svg#search"></use>
-        </svg>
-      </button>
-
-      <nav class="header__nav">
-        <a href="#">
-          <svg preserveAspectRatio="xMinYMin meet" viewBox="0 0 22 22" xmlns="http://www.w3.org/2000/svg">
-            <use href="./assets/icons/icons.svg#customers"></use>
-          </svg>
-        </a>
-
-        <a href="#">
-          <svg preserveAspectRatio="xMinYMin meet" viewBox="0 0 22 22" xmlns="http://www.w3.org/2000/svg">
-            <use href="./assets/icons/icons.svg#notification"></use>
-          </svg>
-        </a>
-        <a href="#">
-          <img src="./assets/images/Avatar.png" alt="profile" />
-        </a>
-      </nav>
-    </header>
-    <main class="main page__main">main</main>
-  </div>
-</body>
-
+            <span> Login with Facebook </span>
+          </button>
+          <button class="auth__button auth__button--google">
+            <span class="auth__icon">
+              <svg
+                preserveAspectRatio="xMinYMin meet"
+                viewBox="0 0 19 19"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <use href="./assets/icons/icons.svg#google"></use>
+              </svg>
+            </span>
+            <span>Login with Google</span>
+          </button>
+        </div>
+        <p class="auth__text auth__text--centered">
+          or login with email address
+        </p>
+        <form class="auth__form form">
+          <div class="form__field">
+            <input type="email" placeholder="Email Address" />
+            <label>Email Address</label>
+          </div>
+          <div class="form__field">
+            <input type="password" placeholder="Password" />
+            <label>Password</label>
+          </div>
+          <button class="form__button">Sign in</button>
+        </form>
+        <p class="auth__text">
+          Don't have an account?
+          <a class="auth__link" href="./register.html">Sign up</a>
+        </p>
+      </section>
+    </div>
+  </body>
 </html>
