--- a/dashboard/src/error.html
+++ b/dashboard/src/error.html
@@ -18,17 +18,18 @@
         it is, try using the navigation
       </p>
       <img class="error__img" src="assets/images/404.svg" alt="" />
-      <a href="./index.html" class="return-button error__button">
-        <span class="return-link__icon"
+      <a href="./index.html" class="button button--primary error__button">
+        <span
           ><svg
             preserveAspectRatio="xMinYMin meet"
             viewBox="0 0 20 16"
             xmlns="http://www.w3.org/2000/svg"
           >
-            <use href="./assets/icons/icons.svg#arrow-3-left"></use></svg
-        ></span>
-        <span>Go back to Dashboard</span></a
-      >
+            <use href="./assets/icons/icons.svg#arrow-3-left"></use>
+          </svg>
+          <span>Go back to Dashboard</span>
+        </span>
+      </a>
     </div>
   </body>
 </html>
