--- a/dashboard/src/products.html
+++ b/dashboard/src/products.html
@@ -171,7 +171,338 @@
           </a>
         </nav>
       </header>
-      <main class="main page__main">main</main>
+      <main class="main page__main">
+        <div class="main__wrapper">
+          <div class="main__header">
+            <h2>Products</h2>
+            <div class="main__controls">
+              <button class="button button--secondary">
+                <span>
+                  <svg
+                    preserveAspectRatio="xMinYMin meet"
+                    viewBox="0 0 18 16"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <use href="./assets/icons/icons.svg#import"></use>
+                  </svg>
+                </span>
+                <span> Import </span></button
+              ><button class="button button--secondary">
+                <span>
+                  <svg
+                    preserveAspectRatio="xMinYMin meet"
+                    viewBox="0 0 18 16"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <use href="./assets/icons/icons.svg#export"></use>
+                  </svg>
+                </span>
+                <span> Export </span>
+              </button>
+              <button class="button button--primary">Add Products</button>
+            </div>
+          </div>
+
+          <div class="main__grid main__grid--3">
+            <section class="card main__grid-cell main__grid-cell--full">
+              <div class="card__body">
+                <form class="form">
+                  <div class="form__field form__field--search">
+                    <svg
+                      preserveAspectRatio="xMinYMin meet"
+                      viewBox="0 0 19 19"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <use href="./assets/icons/icons.svg#search"></use>
+                    </svg>
+                    <input type="search" name="search" />
+                    <label>Search product</label>
+                  </div>
+                </form>
+              </div>
+            </section>
+            <div class="main__grid main__grid-cell--full main__grid--3">
+              <section
+                class="product card main__grid-cell main__grid-cell--small"
+              >
+                <div class="product__description card__body">
+                  <img src="./assets/icons/dropbox.svg" alt="" />
+                  <h3>Dropbox</h3>
+                  <p>
+                    Dropbox is a file hosting service that offers cloud storage,
+                    file synchronization, a personal cloud.
+                  </p>
+                </div>
+                <div class="product__info card__footer">
+                  <p>
+                    <span>
+                      <svg
+                        preserveAspectRatio="xMinYMin meet"
+                        viewBox="0 0 22 20"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <use href="./assets/icons/icons.svg#clock"></use>
+                      </svg>
+                    </span>
+                    <span>Updated 2 hr ago</span>
+                  </p>
+                  <p>
+                    <span
+                      ><svg
+                        preserveAspectRatio="xMinYMin meet"
+                        viewBox="0 0 22 16"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <use href="./assets/icons/icons.svg#export"></use></svg
+                    ></span>
+                    <span>Updated 2 hr ago</span>
+                  </p>
+                </div>
+              </section>
+              <section
+                class="product card main__grid-cell main__grid-cell--small"
+              >
+                <div class="product__description card__body">
+                  <img src="./assets/icons/medium.svg" alt="" />
+                  <h3>Medium</h3>
+                  <p>
+                    Dropbox is a file hosting service that offers cloud storage,
+                    file synchronization, a personal cloud.
+                  </p>
+                </div>
+                <div class="product__info card__footer">
+                  <p>
+                    <span>
+                      <svg
+                        preserveAspectRatio="xMinYMin meet"
+                        viewBox="0 0 22 20"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <use href="./assets/icons/icons.svg#clock"></use>
+                      </svg>
+                    </span>
+                    <span>Updated 2 hr ago</span>
+                  </p>
+                  <p>
+                    <span
+                      ><svg
+                        preserveAspectRatio="xMinYMin meet"
+                        viewBox="0 0 22 16"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <use href="./assets/icons/icons.svg#export"></use></svg
+                    ></span>
+                    <span>Updated 2 hr ago</span>
+                  </p>
+                </div>
+              </section>
+              <section
+                class="product card main__grid-cell main__grid-cell--small"
+              >
+                <div class="product__description card__body">
+                  <img src="./assets/icons/slack.svg" alt="" />
+                  <h3>Slack</h3>
+                  <p>
+                    Dropbox is a file hosting service that offers cloud storage,
+                    file synchronization, a personal cloud.
+                  </p>
+                </div>
+                <div class="product__info card__footer">
+                  <p>
+                    <span>
+                      <svg
+                        preserveAspectRatio="xMinYMin meet"
+                        viewBox="0 0 22 20"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <use href="./assets/icons/icons.svg#clock"></use>
+                      </svg>
+                    </span>
+                    <span>Updated 2 hr ago</span>
+                  </p>
+                  <p>
+                    <span
+                      ><svg
+                        preserveAspectRatio="xMinYMin meet"
+                        viewBox="0 0 22 16"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <use href="./assets/icons/icons.svg#export"></use></svg
+                    ></span>
+                    <span>Updated 2 hr ago</span>
+                  </p>
+                </div>
+              </section>
+              <section
+                class="product card main__grid-cell main__grid-cell--small"
+              >
+                <div class="product__description card__body">
+                  <img src="./assets/icons/dropbox.svg" alt="" />
+                  <h3>Dropbox</h3>
+                  <p>
+                    Dropbox is a file hosting service that offers cloud storage,
+                    file synchronization, a personal cloud.
+                  </p>
+                </div>
+                <div class="product__info card__footer">
+                  <p>
+                    <span>
+                      <svg
+                        preserveAspectRatio="xMinYMin meet"
+                        viewBox="0 0 22 20"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <use href="./assets/icons/icons.svg#clock"></use>
+                      </svg>
+                    </span>
+                    <span>Updated 2 hr ago</span>
+                  </p>
+                  <p>
+                    <span
+                      ><svg
+                        preserveAspectRatio="xMinYMin meet"
+                        viewBox="0 0 22 16"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <use href="./assets/icons/icons.svg#export"></use></svg
+                    ></span>
+                    <span>Updated 2 hr ago</span>
+                  </p>
+                </div>
+              </section>
+              <section
+                class="product card main__grid-cell main__grid-cell--small"
+              >
+                <div class="product__description card__body">
+                  <img src="./assets/icons/medium.svg" alt="" />
+                  <h3>Medium</h3>
+                  <p>
+                    Dropbox is a file hosting service that offers cloud storage,
+                    file synchronization, a personal cloud.
+                  </p>
+                </div>
+                <div class="product__info card__footer">
+                  <p>
+                    <span>
+                      <svg
+                        preserveAspectRatio="xMinYMin meet"
+                        viewBox="0 0 22 20"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <use href="./assets/icons/icons.svg#clock"></use>
+                      </svg>
+                    </span>
+                    <span>Updated 2 hr ago</span>
+                  </p>
+                  <p>
+                    <span
+                      ><svg
+                        preserveAspectRatio="xMinYMin meet"
+                        viewBox="0 0 22 16"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <use href="./assets/icons/icons.svg#export"></use></svg
+                    ></span>
+                    <span>Updated 2 hr ago</span>
+                  </p>
+                </div>
+              </section>
+              <section
+                class="product card main__grid-cell main__grid-cell--small"
+              >
+                <div class="product__description card__body">
+                  <img src="./assets/icons/slack.svg" alt="" />
+                  <h3>Slack</h3>
+                  <p>
+                    Dropbox is a file hosting service that offers cloud storage,
+                    file synchronization, a personal cloud.
+                  </p>
+                </div>
+                <div class="product__info card__footer">
+                  <p>
+                    <span>
+                      <svg
+                        preserveAspectRatio="xMinYMin meet"
+                        viewBox="0 0 22 20"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <use href="./assets/icons/icons.svg#clock"></use>
+                      </svg>
+                    </span>
+                    <span>Updated 2 hr ago</span>
+                  </p>
+                  <p>
+                    <span
+                      ><svg
+                        preserveAspectRatio="xMinYMin meet"
+                        viewBox="0 0 22 16"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <use href="./assets/icons/icons.svg#export"></use></svg
+                    ></span>
+                    <span>Updated 2 hr ago</span>
+                  </p>
+                </div>
+              </section>
+              <section class="pagination main__grid-cell main__grid-cell--full">
+                <button
+                  class="
+                    pagination__button
+                    pagination__button--switch
+                    pagination__button--disabled
+                  "
+                >
+                  <span
+                    ><svg
+                      preserveAspectRatio="xMinYMin meet"
+                      viewBox="0 0 9 14"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <use
+                        href="./assets/icons/icons.svg#arrow-1-left"
+                      ></use></svg
+                  ></span>
+                </button>
+                <ul class="pagination__pages-container">
+                  <li>
+                    <button
+                      class="
+                        pagination__button
+                        pagination__button--page
+                        pagination__button--active
+                      "
+                    >
+                      1
+                    </button>
+                  </li>
+                  <li>
+                    <button class="pagination__button pagination__button--page">
+                      2
+                    </button>
+                  </li>
+                  <li>
+                    <button class="pagination__button pagination__button--page">
+                      3
+                    </button>
+                  </li>
+                </ul>
+                <button class="pagination__button pagination__button--switch">
+                  <span
+                    ><svg
+                      preserveAspectRatio="xMinYMin meet"
+                      viewBox="0 0 8 14"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <use
+                        href="./assets/icons/icons.svg#arrow-1-right"
+                      ></use></svg
+                  ></span>
+                </button>
+              </section>
+            </div>
+          </div>
+        </div>
+      </main>
     </div>
   </body>
 </html>
