--- a/dashboard/src/register.html
+++ b/dashboard/src/register.html
@@ -12,8 +12,10 @@
   <body>
     <div class="auth-container">
       <section class="auth auth-container__inner">
-        <a class="return-link auth__return-link" href="./index.html"
-          ><span class="return-link__icon"
+        <a
+          class="button button--secondary auth__button button-secondary"
+          href="./index.html"
+          ><span
             ><svg
               preserveAspectRatio="xMinYMin meet"
               viewBox="0 0 20 16"
@@ -28,19 +30,19 @@
 
         <form class="auth__form form">
           <div class="form__field">
-            <input type="text" placeholder="First Name" />
+            <input type="text" placeholder="First Name" name="first-name" />
             <label>First Name</label>
           </div>
           <div class="form__field">
-            <input type="text" placeholder="Last Name" />
+            <input type="text" placeholder="Last Name" name="last-name" />
             <label>Last Name</label>
           </div>
           <div class="form__field">
-            <input type="email" placeholder="Email Address" />
+            <input type="email" placeholder="Email Address" name="email" />
             <label>Email Address</label>
           </div>
           <div class="form__field">
-            <input type="password" placeholder="Password" />
+            <input type="password" placeholder="Password" name="password" />
             <label>Password</label>
           </div>
           <div>
