--- a/dashboard/src/settings.html
+++ b/dashboard/src/settings.html
@@ -172,107 +172,144 @@
         </nav>
       </header>
       <main class="settings main page__main">
-        <div class="main__grid">
-          <section class="card main__grid-cell main__grid-cell--full">
-            <div class="card__header">
-              <h3>Notifications</h3>
-              <p>Manage the notifications</p>
-            </div>
-            <form class="form card__form">
-              <div class="card__body">
-                <div class="card__grid">
-                  <div
-                    class="
-                      card__grid-cell card__grid-cell--small
-                      radio-group
-                      card__radio-group
-                    "
-                  >
-                    <h4>Notifications</h4>
-                    <ul>
-                      <li>
-                        <label>
-                          <input
-                            checked
-                            type="checkbox"
-                            name="notifications-email"
-                          />
-                          <span>Email</span>
-                        </label>
-                      </li>
+        <div class="main__wrapper">
+          <div class="main__grid">
+            <section class="card main__grid-cell main__grid-cell--full">
+              <div class="card__header">
+                <h3>Notifications</h3>
+                <p>Manage the notifications</p>
+              </div>
+              <form class="form card__form">
+                <div class="card__body">
+                  <div class="card__grid">
+                    <div
+                      class="
+                        card__grid-cell card__grid-cell--small
+                        radio-group
+                        card__radio-group
+                      "
+                    >
+                      <h4>Notifications</h4>
+                      <ul>
+                        <li>
+                          <label>
+                            <input
+                              checked
+                              type="checkbox"
+                              name="notifications-email"
+                            />
+                            <span>Email</span>
+                          </label>
+                        </li>
 
-                      <li>
-                        <label>
-                          <input
-                            checked
-                            type="checkbox"
-                            name="notifications-push-notifications"
-                          />
-                          <span>Push Notifications</span>
-                        </label>
-                      </li>
-                      <li>
-                        <label>
-                          <input
-                            type="checkbox"
-                            name="notifications-text-messages"
-                          />
-                          <span>Text Messages</span>
-                        </label>
-                      </li>
-                      <li>
-                        <label>
-                          <input
-                            type="checkbox"
-                            name="notifications-phone-calls"
-                          />
-                          <span>Phone calls</span>
-                        </label>
-                      </li>
-                    </ul>
-                  </div>
-                  <div
-                    class="
-                      card__grid-cell card__grid-cell--small
-                      radio-group
-                      card__radio-group
-                    "
-                  >
-                    <h4>Messages</h4>
-                    <ul>
-                      <li>
-                        <label>
-                          <input type="checkbox" name="messages-email" />
-                          <span>Email</span>
-                        </label>
-                      </li>
+                        <li>
+                          <label>
+                            <input
+                              checked
+                              type="checkbox"
+                              name="notifications-push-notifications"
+                            />
+                            <span>Push Notifications</span>
+                          </label>
+                        </li>
+                        <li>
+                          <label>
+                            <input
+                              type="checkbox"
+                              name="notifications-text-messages"
+                            />
+                            <span>Text Messages</span>
+                          </label>
+                        </li>
+                        <li>
+                          <label>
+                            <input
+                              type="checkbox"
+                              name="notifications-phone-calls"
+                            />
+                            <span>Phone calls</span>
+                          </label>
+                        </li>
+                      </ul>
+                    </div>
+                    <div
+                      class="
+                        card__grid-cell card__grid-cell--small
+                        radio-group
+                        card__radio-group
+                      "
+                    >
+                      <h4>Messages</h4>
+                      <ul>
+                        <li>
+                          <label>
+                            <input type="checkbox" name="messages-email" />
+                            <span>Email</span>
+                          </label>
+                        </li>
 
-                      <li>
-                        <label>
-                          <input
-                            type="checkbox"
-                            name="messages-push-notifications"
-                          />
-                          <span>Push Notifications</span>
-                        </label>
-                      </li>
-                      <li>
-                        <label>
-                          <input type="checkbox" name="messages-phone-calls" />
-                          <span>Phone calls</span>
-                        </label>
-                      </li>
-                    </ul>
+                        <li>
+                          <label>
+                            <input
+                              type="checkbox"
+                              name="messages-push-notifications"
+                            />
+                            <span>Push Notifications</span>
+                          </label>
+                        </li>
+                        <li>
+                          <label>
+                            <input
+                              type="checkbox"
+                              name="messages-phone-calls"
+                            />
+                            <span>Phone calls</span>
+                          </label>
+                        </li>
+                      </ul>
+                    </div>
                   </div>
                 </div>
+                <div class="card__footer">
+                  <button
+                    class="form__button card__button card__button--submit"
+                  >
+                    Save
+                  </button>
+                </div>
+              </form>
+            </section>
+            <section class="card main__grid-cell main__grid-cell--full">
+              <div class="card__header">
+                <h3>Notifications</h3>
+                <p>Manage the notifications</p>
               </div>
-              <div class="card__footer">
-                <button class="form__button card__button card__button--submit">
-                  Save
-                </button>
-              </div>
-            </form>
-          </section>
+              <form class="form card__form">
+                <div class="card__body">
+                  <div class="form__field">
+                    <input
+                      type="password"
+                      placeholder="Password"
+                      name="password"
+                    />
+                    <label>Password</label>
+                  </div>
+                  <div class="form__field">
+                    <input type="password" placeholder="Confirm Password" />
+                    <label>Confirm Password</label>
+                  </div>
+                </div>
+
+                <div class="card__footer">
+                  <button
+                    class="form__button card__button card__button--submit"
+                  >
+                    Update
+                  </button>
+                </div>
+              </form>
+            </section>
+          </div>
         </div>
       </main>
     </div>
