--- a/dashboard/src/login.html
+++ b/dashboard/src/login.html
@@ -68,7 +68,7 @@
             <input type="password" placeholder="Password" name="password" />
             <label>Password</label>
           </div>
-          <button class="form__button">Sign in</button>
+          <button class="form__button">Sign In</button>
         </form>
         <p class="auth__text">
           Don't have an account?
