--- a/dashboard/src/register.html
+++ b/dashboard/src/register.html
@@ -52,7 +52,7 @@
               <a class="auth__link" href="#">Terms and Conditions</a>
             </label>
           </div>
-          <button class="form__button">Sign in</button>
+          <button class="form__button">Sign Up</button>
         </form>
         <p class="auth__text">
           Already have an account?
