--- a/dashboard/src/customers.html
+++ b/dashboard/src/customers.html
@@ -171,7 +171,252 @@
           </a>
         </nav>
       </header>
-      <main class="main page__main">main</main>
+      <main class="main page__main">
+        <div class="main__wrapper">
+          <div class="main__header">
+            <h2>Customers</h2>
+            <div class="main__controls">
+              <button class="button button--secondary">
+                <span>
+                  <svg
+                    preserveAspectRatio="xMinYMin meet"
+                    viewBox="0 0 18 16"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <use href="./assets/icons/icons.svg#import"></use>
+                  </svg>
+                </span>
+                <span> Import </span></button
+              ><button class="button button--secondary">
+                <span>
+                  <svg
+                    preserveAspectRatio="xMinYMin meet"
+                    viewBox="0 0 18 16"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <use href="./assets/icons/icons.svg#export"></use>
+                  </svg>
+                </span>
+                <span> Export </span>
+              </button>
+              <button class="button button--primary">Add Customers</button>
+            </div>
+          </div>
+
+          <div class="main__grid main__grid--3">
+            <section class="card main__grid-cell main__grid-cell--full">
+              <div class="card__body">
+                <form class="form">
+                  <div class="form__field form__field--search">
+                    <svg
+                      preserveAspectRatio="xMinYMin meet"
+                      viewBox="0 0 19 19"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <use href="./assets/icons/icons.svg#search"></use>
+                    </svg>
+                    <input type="search" name="search" />
+                    <label>Search customer</label>
+                  </div>
+                </form>
+              </div>
+            </section>
+
+            <section class="card main__grid-cell main__grid-cell--full">
+              <div class="card__header">
+                <h3>Latest Orders</h3>
+              </div>
+              <table class="table">
+                <thead>
+                  <tr>
+                    <th>NAME</th>
+                    <th>EMAIL</th>
+                    <th class="table__icon-cell">
+                      <svg
+                        preserveAspectRatio="xMinYMin meet"
+                        viewBox="0 0 13 13"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <use href="./assets/icons/icons.svg#arrow-3-down"></use>
+                      </svg>
+                      <span> LOCATION </span>
+                    </th>
+                    <th>PHONE</th>
+                    <th>REGISTRATION DATE</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td class="table__image-cell" data-label="NAME">
+                      <img src="./assets/images/Avatar.jpg" />
+                      <span> Ekaterina Tankova </span>
+                    </td>
+                    <td data-label="EMAIL">
+                      <a href="mailto:ekaterina.tankova@devias.io"
+                        >ekaterina.tankova@devias.io</a
+                      >
+                    </td>
+                    <td data-label="LOCATION">
+                      Parkersburg, West Virginia, USA
+                    </td>
+                    <td data-label="PHONE">
+                      <a href="tel:304-428-3097">304-428-3097</a>
+                    </td>
+                    <td data-label="REGISTRATION DATE">12/04/2019</td>
+                  </tr>
+                  <tr>
+                    <td class="table__image-cell" data-label="NAME">
+                      <img src="./assets/images/Avatar.jpg" /><span>
+                        Ekaterina Tankova
+                      </span>
+                    </td>
+                    <td data-label="EMAIL">
+                      <a href="mailto:ekaterina.tankova@devias.io"
+                        >ekaterina.tankova@devias.io</a
+                      >
+                    </td>
+                    <td data-label="LOCATION">
+                      Parkersburg, West Virginia, USA
+                    </td>
+                    <td data-label="PHONE">
+                      <a href="tel:304-428-3097">304-428-3097</a>
+                    </td>
+                    <td data-label="REGISTRATION DATE">12/04/2019</td>
+                  </tr>
+                  <tr>
+                    <td class="table__image-cell" data-label="NAME">
+                      <img src="./assets/images/Avatar.jpg" /><span>
+                        Ekaterina Tankova
+                      </span>
+                    </td>
+                    <td data-label="EMAIL">
+                      <a href="mailto:ekaterina.tankova@devias.io"
+                        >ekaterina.tankova@devias.io</a
+                      >
+                    </td>
+                    <td data-label="LOCATION">
+                      Parkersburg, West Virginia, USA
+                    </td>
+                    <td data-label="PHONE">
+                      <a href="tel:304-428-3097">304-428-3097</a>
+                    </td>
+                    <td data-label="REGISTRATION DATE">12/04/2019</td>
+                  </tr>
+                  <tr>
+                    <td class="table__image-cell" data-label="NAME">
+                      <img src="./assets/images/Avatar.jpg" /><span>
+                        Ekaterina Tankova
+                      </span>
+                    </td>
+                    <td data-label="EMAIL">
+                      <a href="mailto:ekaterina.tankova@devias.io"
+                        >ekaterina.tankova@devias.io</a
+                      >
+                    </td>
+                    <td data-label="LOCATION">
+                      Parkersburg, West Virginia, USA
+                    </td>
+                    <td data-label="PHONE">
+                      <a href="tel:304-428-3097">304-428-3097</a>
+                    </td>
+                    <td data-label="REGISTRATION DATE">12/04/2019</td>
+                  </tr>
+                  <tr>
+                    <td class="table__image-cell" data-label="NAME">
+                      <img src="./assets/images/Avatar.jpg" /><span>
+                        Ekaterina Tankova
+                      </span>
+                    </td>
+                    <td data-label="EMAIL">
+                      <a href="mailto:ekaterina.tankova@devias.io"
+                        >ekaterina.tankova@devias.io</a
+                      >
+                    </td>
+                    <td data-label="LOCATION">
+                      Parkersburg, West Virginia, USA
+                    </td>
+                    <td data-label="PHONE">
+                      <a href="tel:304-428-3097">304-428-3097</a>
+                    </td>
+                    <td data-label="REGISTRATION DATE">12/04/2019</td>
+                  </tr>
+                  <tr>
+                    <td class="table__image-cell" data-label="NAME">
+                      <img
+                        class="header__avatar"
+                        src="./assets/images/Avatar.jpg"
+                        alt="profile"
+                      /><span> Ekaterina Tankova </span>
+                    </td>
+                    <td data-label="EMAIL">
+                      <a href="mailto:ekaterina.tankova@devias.io"
+                        >ekaterina.tankova@devias.io</a
+                      >
+                    </td>
+                    <td data-label="LOCATION">
+                      Parkersburg, West Virginia, USA
+                    </td>
+                    <td data-label="PHONE">
+                      <a href="tel:304-428-3097">304-428-3097</a>
+                    </td>
+                    <td data-label="REGISTRATION DATE">12/04/2019</td>
+                  </tr>
+                </tbody>
+              </table>
+              <div class="card__footer pagination">
+                <form>
+                  <label>
+                    Rows per page:
+                    <select class="pagination__select">
+                      <option>10</option>
+                      <option>15</option>
+                      <option>25</option>
+                    </select>
+                  </label>
+                </form>
+                <p class="pagination__text">1-5 of 13</p>
+                <div>
+                  <button
+                    class="
+                      pagination__button
+                      pagination__button--switch
+                      pagination__button--disabled
+                    "
+                  >
+                    <span
+                      ><svg
+                        preserveAspectRatio="xMinYMin meet"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <use
+                          href="./assets/icons/icons.svg#arrow-1-left"
+                        ></use></svg
+                    ></span>
+                  </button>
+                  <button
+                    class="
+                      ml-s
+                      pagination__button
+                      pagination__button--switch
+                      pagination__button--disabled
+                    "
+                  >
+                    <span
+                      ><svg
+                        preserveAspectRatio="xMinYMin meet"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <use
+                          href="./assets/icons/icons.svg#arrow-1-right"
+                        ></use></svg
+                    ></span>
+                  </button>
+                </div>
+              </div>
+            </section>
+          </div>
+        </div>
+      </main>
     </div>
   </body>
 </html>
