--- a/dashboard/src/settings.html
+++ b/dashboard/src/settings.html
@@ -176,8 +176,10 @@
           <div class="main__grid">
             <section class="card main__grid-cell main__grid-cell--full">
               <div class="card__header">
-                <h3>Notifications</h3>
-                <p>Manage the notifications</p>
+                <div>
+                  <h3>Notifications</h3>
+                  <p>Manage the notifications</p>
+                </div>
               </div>
               <form class="form card__form">
                 <div class="card__body">
