--- a/stacking/src/index.html
+++ b/stacking/src/index.html
@@ -17,8 +17,10 @@
 Решаем у себя в IDE и выкладываем на github.
  -->
   <main class="app">
-    <div class="app__message" id="message"></div>
-    <div class="app__balance" id="amount">Balance: 0</div>
+    <header class="app__header">
+      <div class="app__balance" id="amount">Balance: 0</div>
+      <div class="app__message" id="message"></div>
+    </header>
       <form id="form" class="app__form">
         <input id="input" placeholder="введи количество монет" />
         <select id="select" placeholder="выбери период">
