--- a/jsTask/src/assets/excel.html
+++ b/jsTask/src/assets/excel.html
@@ -51,10 +51,17 @@
                     Также нужно описать какие стили добавляет эта иконка при нажатии (найти где это делается в проекте и добавить)
       -->
 
+      <!-- DONE: 3. Добавила кнопку в excel.html. Добавила описание кнопки в toolbar.template.js
+      -->
+
+      <div class="button">
+        <i class="material-icons">format_bold</i>
+      </div>
+      
       <div class="button">
         <i class="material-icons">format_italic</i>
       </div>
-
+      
       <div class="button">
         <i class="material-icons">format_underlined</i>
       </div>
